--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@shopify/react-native-skia": "^0.1.221",
+    "@shopify/react-native-skia": "0.1.221",
     "axios": "^1.7.4",
     "expo": "~50.0.17",
     "expo-app-loading": "^2.1.1",
