--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/permanent-marker": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@fontsource/permanent-marker": "^5.1.0",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -28,7 +29,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.6"
