--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npx setup-skia-web public && node path-fs-canvaskit-postinstall.js"
   },
   "dependencies": {
+    "@expo-google-fonts/fredoka": "^0.2.3",
     "@expo-google-fonts/permanent-marker": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@fontsource/permanent-marker": "^5.1.0",
@@ -19,10 +20,10 @@
     "@shopify/react-native-skia": "0.1.221",
     "axios": "^1.7.4",
     "expo": "~50.0.17",
-    "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-secure-store": "~12.8.1",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
